--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    color: var(--bg-write);
+    color:white;
 }
 
 .data__price{
